# xcaca

./: .gitignore  KNOWN_ISSUES.md  LICENSE  README.md  libcaca_0.99.beta20-4ubuntu0.1.dsc
libcaca-0.99.beta20/: caca-config.in  libcaca.sln
libcaca-0.99.beta20/caca/: libcaca.vcxproj
libcaca-0.99.beta20/caca-sharp/: caca-sharp.csproj  test-csharp.csproj
libcaca-0.99.beta20/cxx/: libcaca++.vcxproj  test-cxx.vcxproj
libcaca-0.99.beta20/debian/: caca-utils.install  changelog  control  gbp.conf  libcaca-dev.install  libcaca0.install  not-installed  rules  salsa-ci.yml  watch
libcaca-0.99.beta20/doc/: doxygen.cfg.in
libcaca-0.99.beta20/examples/: blit.vcxproj  colors.vcxproj  conio-snake.vcxproj  conio.vcxproj  demo.vcxproj  dithering.vcxproj  driver.vcxproj  event.vcxproj  font.vcxproj  frames.vcxproj  fullwidth.vcxproj  gamma.vcxproj  hsv.vcxproj  import.vcxproj  input.vcxproj  transform.vcxproj  truecolor.vcxproj  unicode.vcxproj
libcaca-0.99.beta20/src/: cacademo.vcxproj  cacafire.vcxproj  cacaview.vcxproj  img2txt.c
tests/: run_tests.sh
xorg-server/: Makefile.in  aclocal.m4  configure  configure.ac  configure~  libcaca_0.99.beta20-4ubuntu0.1.debian.tar.xz  meson.build  meson_options.txt
xorg-server/Xi/: xiquerydevice.c
xorg-server/config/: Makefile.in
xorg-server/dix/: devices.c  touch.c
xorg-server/hw/: meson.build
xorg-server/hw/kdrive/caca/: caca.c  caca_host.c  cacainit.c  cacainput.c  meson.build  xcaca.h
xorg-server/include/: do-not-use-config.h.in  xkbsrv.h
xorg-server/mi/: mipointer.h  misprite.c
xorg-server/record/: record.c
(+20 files in other folders)
